--- a/style.css
+++ b/style.css
@@ -35,8 +35,15 @@ h1 {
 
 footer {
   width: 100%;
+  height: 50px;
+
   position: fixed;
   bottom: 0;
   right: auto;
   text-align: center;
+}
+
+footer a {
+  text-decoration: none;
+  color: black;
 }
